--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,5 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./client
+    environment:
+      - BLOG_URL=http://localhost:3050/api/blog
