--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,25 @@
 language: generic
 sudo: required
 services:
-- docker
+  - docker
+
 addons:
   ssh_known_hosts: 142.93.227.119
+
 before_install:
-- openssl aes-256-cbc -K $encrypted_0ddd2445e49f_key -iv $encrypted_0ddd2445e49f_iv
-  -in travis_rsa.enc -out travis_rsa -d
+  - openssl aes-256-cbc -K $encrypted_0ddd2445e49f_key -iv $encrypted_0ddd2445e49f_iv
+    -in travis_rsa.enc -out travis_rsa -d
+  - chmod 600 travis_rsa
+  - mv travis_rsa ~/.ssh/id_rsa
+  - cd client
+
 install:
-- npm install
+  - npm install
+
 script:
-- 'true'
+  - 'true'
+
 after_success:
-- npm run build
-- cd ..
-- bash ./deploy.sh
+  - npm run build
+  - cd ..
+  - bash ./deploy.sh
