--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,21 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_0ddd2445e49f_key -iv $encrypted_0ddd2445e49f_iv -in travis_rsa.enc -out travis_rsa -d
   - chmod 600 travis_rsa
   - mv travis_rsa ~/.ssh/id_rsa
-  - cd client
-
-install:
-  - npm install
 
 script:
   - 'true'
 
 after_success:
-  - npm run build
-  - cd ..
+  - docker build -t halldorvil/blog-client ./client
+  - docker build -t halldorvil/blog-nginx ./nginx
+  - docker build -t halldorvil/blog-server ./server
+
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
+  # Take those images and push them to docker hub
+  - docker push halldorvil/blog-client
+  - docker push halldorvil/blog-nginx
+  - docker push halldorvil/blog-server
+
   - bash ./deploy.sh
