--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,16 +2,16 @@ version: "3"
 services:
   nginx:
     restart: always
-    image: halldorvil/blog-nginx
+    image: halldorvil/blog-nginx:TAG
     ports:
       - 80:80
     depends_on:
       - api
       - client
   api:
-    image: halldorvil/blog-server
+    image: halldorvil/blog-server:TAG
   client:
     stdin_open: true
-    image: halldorvil/blog-client
+    image: halldorvil/blog-client:TAG
     environment:
       - BLOG_URL=http://localhost:3050/api/blog
