--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,11 @@ upstream api {
 
 server {
     listen 80;
+    listen [::]:80;
+
+    root /var/www/html;
+
+    server_name example.com www.example.com;
 
     location / {
         proxy_pass http://client;
@@ -25,6 +30,8 @@ server {
         proxy_pass http://api;
     }
 
-    # Allowing POST on static pages
-    error_page 405    =200 $uri;
+    location ~ /.well-known/acme-challenge {
+                allow all;
+                root /var/www/html;
+    }
 }
