--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,7 @@ server {
     listen [::]:80;
 
     root /var/www/html;
+    index index.html index.htm index.nginx-debian.html;
 
     server_name example.com www.example.com;
 
@@ -31,7 +32,7 @@ server {
     }
 
     location ~ /.well-known/acme-challenge {
-                allow all;
-                root /var/www/html;
+        allow all;
+        root /var/www/html;
     }
 }
