fixed server name

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
     root /var/www/html;
     index index.html index.htm index.nginx-debian.html;
 
-    server_name example.com www.example.com;
+    server_name halldorvil.com www.halldorvil.com;
 
     location / {
         proxy_pass http://client;
