--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,6 +23,16 @@ services:
     restart: always
     stdin_open: true
     image: halldorvil/blog-client:{TAG}
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
+    depends_on:
+      - nginx
+    command: certonly --webroot --webroot-path=/var/www/html --email halldorvil@gmail.com --agree-tos --no-eff-email --staging -d halldorvil.com -d www.halldorvil.com
   
 volumes:
   certbot-etc:
@@ -31,5 +41,5 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/halldor/blog/views/
+      device: ./static
       o: bind
