--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,14 +3,14 @@ version: "3"
 services:
   nginx:
     restart: always
-    image: halldorvil/blog-nginx:{TAG}
+    image: nginx:1.15-alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - web-root:/var/www/html
       - ./nginx:/etc/nginx/conf.d
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     depends_on:
       - api
       - client
@@ -26,20 +26,6 @@ services:
 
   certbot:
     image: certbot/certbot
-    volumes:
-      - certbot-etc:/etc/letsencrypt
-      - certbot-var:/var/lib/letsencrypt
-      - web-root:/var/www/html
-    depends_on:
-      - nginx
-    command: certonly --webroot --webroot-path=/var/www/html --email halldorvil@gmail.com --agree-tos --no-eff-email --staging -d halldorvil.com -d www.halldorvil.com
-  
-volumes:
-  certbot-etc:
-  certbot-var:
-  web-root:
-    driver: local
-    driver_opts:
-      type: none
-      device: ./static
-      o: bind
+    volumes: 
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
