--- a/data/nginx/prod/app.production.conf
+++ b/data/nginx/prod/app.production.conf
@@ -8,7 +8,8 @@ upstream api {
 
 server {
     listen 80;
-    server_name halldorvil.com
+    server_name halldorvil.com;
+    server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -22,15 +23,12 @@ server {
 server {
     listen 443 ssl;
     server_name halldorvil.com;
+    server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/halldorvil.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/halldorvil.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location / {
-        proxy_pass http://client;
-    }
 
     location /sockjs-node {
         proxy_pass http://client;
@@ -42,5 +40,9 @@ server {
     location /api {
         rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
+    }
+
+    location / {
+        proxy_pass http://client;
     }
 }
