--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,30 +2,33 @@ version: "3"
 
 services:
   nginx:
-    restart: always
+    restart: unless-stopped
     image: nginx:1.15-alpine
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx:/etc/nginx/conf.d
+      - ./data/nginx/prod:/etc/nginx/conf.d
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     depends_on:
-      - api
       - client
-  
+      - api
+    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
+
   api:
-    restart: always
+    restart: unless-stopped
     image: halldorvil/blog-server:{TAG}
-  
+
   client:
-    restart: always
+    restart: unless-stopped
     stdin_open: true
     image: halldorvil/blog-client:{TAG}
 
   certbot:
     image: certbot/certbot
-    volumes: 
+    restart: unless-stopped
+    volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
