--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ before_install:
   - mv travis_rsa ~/.ssh/id_rsa
 
 script:
-  - 'true'
+  - "true"
 
 after_success:
   - docker build -t halldorvil/blog-client:latest -t halldorvil/blog-client:$SHA ./client
-  - docker build -t halldorvil/blog-nginx:latest -t halldorvil/blog-nginx:$SHA ./nginx
   - docker build -t halldorvil/blog-server:latest -t halldorvil/blog-server:$SHA ./server
 
   # Log in to the docker CLI
@@ -27,11 +26,9 @@ after_success:
 
   # Take those images and push them to docker hub
   - docker push halldorvil/blog-client:latest
-  - docker push halldorvil/blog-nginx:latest
   - docker push halldorvil/blog-server:latest
 
   - docker push halldorvil/blog-client:$SHA
-  - docker push halldorvil/blog-nginx:$SHA
   - docker push halldorvil/blog-server:$SHA
 
   - bash ./deploy.sh
