--- a/data/nginx/prod/app.production.conf
+++ b/data/nginx/prod/app.production.conf
@@ -25,8 +25,8 @@ server {
     server_name halldorvil.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/halldorvil.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/halldorvil.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
