--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,16 @@ script:
 
 after_success:
   - docker build -t halldorvil/blog-client:latest -t halldorvil/blog-client:$SHA ./client
-  - docker build -t halldorvil/blog-server:latest -t halldorvil/blog-server:$SHA ./server
+  - docker build -t halldorvil/blog-api:latest -t halldorvil/blog-server:$SHA ./server
 
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   # Take those images and push them to docker hub
   - docker push halldorvil/blog-client:latest
-  - docker push halldorvil/blog-server:latest
+  - docker push halldorvil/blog-api:latest
 
   - docker push halldorvil/blog-client:$SHA
-  - docker push halldorvil/blog-server:$SHA
+  - docker push halldorvil/blog-api:$SHA
 
   - bash ./deploy.sh
