--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,31 @@ services:
     depends_on:
       - client
       - api
+        
+  postgres:
+    restart: unless-stopped
+    image: postgres:13.2-alpine
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=password
 
   api:
     restart: unless-stopped
     build:
       dockerfile: Dockerfile.dev
-      context: ./server
+      context: ./api
+    environment:
+      - PGUSER=postgres
+      - PGHOST=postgres
+      - PGDATABASE=postgres
+      - PGPASSWORD=password
+      - PGPORT=5432
+      - PORT=5000
+    depends_on:
+      - postgres
 
   client:
     restart: unless-stopped
