--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "express": "4.16.3",
-    "pg": "8.0.3",
+    "body-parser": "*",
     "cors": "2.8.4",
+    "express": "4.16.3",
     "nodemon": "1.18.3",
-    "body-parser": "*"
+    "pg": "^8.0.3"
   },
   "scripts": {
     "dev": "nodemon",
