--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "dompurify": "^2.2.7",
     "faker": "^5.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
